--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@commercetools/sdk-middleware-http": "^7.0.4",
     "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.5",
